# Awesome-Zephyr

./: .clangd  .gitignore  .gitmodules  DocIndex.md  GEMINI.md  README.md  api_test_gemini.sh  api_test_gemini_raw.sh  docs
.gemini/scripts/: Multi-process_chunk_pdf.py  debug_structure.py  extract_kb_content.py  generate_kb_index.py  generate_root_index.py  sync_obsidian.sh
docs/: 【书签】zephyr.xml
note/Addt/: clangd屏蔽交叉编译参数.md
note/Kernel/: 01-Threading_and_IPC.md
note/Kernel/data_passing/: PLAN.md
note/subsystem/: 01-gpio.md
note/subsystem/input/: 01-Overview.md
note/subsystem/sensor/mpu6050_sample/boards/: esp32c3_devkitm.overlay
note/subsystem/sensor/mpu6050_sample/src/: main.c
note/subsystem/zbus/hello_world_sample/src/: main.c
prj/: .gitignore  board-common  board-luatosESPC3  prj.code-workspace
prj/.ide/: .gitignore  .zephyr-init.sh  .zshrc  prj.code-workspace
prj/01-blinky/: CMakeLists.txt
prj/01-blinky/boards/: nrf54h20dk_nrf54h20_cpuppr.overlay
prj/01-blinky/src/: main.c
prj/02-threads/: CMakeLists.txt  prj.conf
prj/02-threads/src/: main.c
prj/03-peripheral_hr/: CMakeLists.txt
prj/04-bluetooth_shell/: CMakeLists.txt
prj/05-dual-chip-tester/: host
prj/05-dual-chip-tester/controller_hci_uart/: CMakeLists.txt
prj/05-dual-chip-tester/controller_hci_uart/boards/: esp32c3_luatos_core.conf  esp32c3_luatos_core.overlay
prj/05-dual-chip-tester/host_shell/: prj.conf
sdk/: README.md
